[package]
name = "practice"
version = "0.1.0"
edition = "2021"
default-run = "practice"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "database"
path = "src/database.rs"

[[bin]]
name = "hello"
path = "src/hello.rs"

[dependencies]
rand = "0.8.5"
error-chain = "0.12.4"
rusqlite = "0.27.0"
